--- a/Makefile.config
+++ b/Makefile.config
@@ -23,12 +23,20 @@ OPENCV_VERSION := 3
 
 # CUDA_DIR := /misc/software-lin/lmbsoft/cuda-7.0.28
 
+CUDA_ARCH := -gencode arch=compute_30,code=sm_30 \
+		-gencode arch=compute_35,code=sm_35 \
+		-gencode arch=compute_50,code=sm_50 \
+		-gencode arch=compute_52,code=sm_52 \
+		-gencode arch=compute_60,code=sm_60 \
+		-gencode arch=compute_61,code=sm_61 \
+		-gencode arch=compute_61,code=compute_61
+        
 # CUDA architecture setting: going with all of them.
 # For CUDA < 6.0, comment the *_50 lines for compatibility.
-CUDA_ARCH := -gencode arch=compute_20,code=sm_20 \
-    -gencode arch=compute_35,code=sm_35 \
-    -gencode arch=compute_50,code=sm_50 \
-    -gencode arch=compute_50,code=compute_50
+#CUDA_ARCH := -gencode arch=compute_20,code=sm_20 \
+#    -gencode arch=compute_35,code=sm_35 \
+#    -gencode arch=compute_50,code=sm_50 \
+#    -gencode arch=compute_50,code=compute_50
 
 #    -gencode arch=compute_20,code=sm_21 \
 #    -gencode arch=compute_30,code=sm_30 \
@@ -82,7 +90,7 @@ WITH_PYTHON_LAYER := 1
 
 # Whatever else you find you need goes here.
 INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include /usr/include/hdf5/serial
-LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu/hdf5/serial /usr/local/share/Opencv/3rdparty/lib/
+LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib /usr/lib/x86_64-linux-gnu/hdf5/serial
 
 # If Homebrew is installed at a non standard location (for example your home directory) and you use it for general dependencies
 # INCLUDE_DIRS += $(shell brew --prefix)/include
